--- a/public/guide-pratique.html
+++ b/public/guide-pratique.html
@@ -474,18 +474,102 @@
             <h4>
               <i class="fas fa-shopping-cart"></i> Supermarchés et alimentation
             </h4>
+
+            <h5><i class="fas fa-store"></i> Carrefour Market</h5>
             <p>
-              <strong>Carrefour Market :</strong> Moyenne surface sur la N2 vers
-              Pointe-Noire, permet de faire le gros des courses nécessaires au
-              séjour.
-            </p>
-            <p>
-              <strong>Leader Price :</strong> En vis-à-vis de Carrefour Market,
-              plus rustique mais très intéressant au niveau des prix avec des
-              produits de bonne qualité.
+              Moyenne surface sur la N2 vers Pointe-Noire, permet de faire le
+              gros des courses nécessaires au séjour.
             </p>
 
-            <h4><i class="fas fa-fish"></i> Cap Créole - Poisson frais</h4>
+            <!-- Image et lien de navigation pour Carrefour Market -->
+            <div style="margin-top: 20px; text-align: center">
+              <img
+                src="images/guide/02.jpg"
+                alt="Carrefour Market"
+                style="
+                  width: 100%;
+                  max-width: 400px;
+                  height: 200px;
+                  object-fit: cover;
+                  border-radius: 8px;
+                  margin-bottom: 15px;
+                  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+                "
+              />
+
+              <a
+                href="geo:16.1581,-61.7761?q=Carrefour+Market+Bouillante"
+                style="
+                  display: inline-flex;
+                  align-items: center;
+                  gap: 8px;
+                  padding: 15px 25px;
+                  background: #4caf50;
+                  color: white;
+                  text-decoration: none;
+                  border-radius: 25px;
+                  font-size: 16px;
+                  font-weight: 500;
+                  transition: all 0.3s ease;
+                  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+                "
+              >
+                <i class="fas fa-location-arrow"></i>
+                Ouvrir la navigation
+              </a>
+            </div>
+
+            <h5 style="margin-top: 30px">
+              <i class="fas fa-store"></i> Leader Price
+            </h5>
+            <p>
+              En vis-à-vis de Carrefour Market, plus rustique mais très
+              intéressant au niveau des prix avec des produits de bonne qualité.
+            </p>
+
+            <!-- Image et lien de navigation pour Leader Price -->
+            <div style="margin-top: 20px; text-align: center">
+              <img
+                src="images/guide/03.jpg"
+                alt="Leader Price"
+                style="
+                  width: 100%;
+                  max-width: 400px;
+                  height: 200px;
+                  object-fit: cover;
+                  border-radius: 8px;
+                  margin-bottom: 15px;
+                  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+                "
+              />
+
+              <a
+                href="geo:16.1581,-61.7761?q=Leader+Price+Pigeon+Bouillante"
+                style="
+                  display: inline-flex;
+                  align-items: center;
+                  gap: 8px;
+                  padding: 15px 25px;
+                  background: #4caf50;
+                  color: white;
+                  text-decoration: none;
+                  border-radius: 25px;
+                  font-size: 16px;
+                  font-weight: 500;
+                  transition: all 0.3s ease;
+                  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+                "
+              >
+                <i class="fas fa-location-arrow"></i>
+                Ouvrir la navigation
+              </a>
+            </div>
+          </div>
+
+          <div class="info-card">
+            <h4><i class="fas fa-fish"></i> Poissonnerie</h4>
+
+            <h5><i class="fas fa-store"></i> Cap Créole</h5>
             <p>
               Un peu avant Carrefour Market sur la N2. Les pêcheurs locaux
               déposent leur poisson qui est traité sur place :
@@ -497,32 +581,151 @@
               <li>Mi-cuit de thon, carpaccio</li>
             </ul>
             <p><em>Un peu cher mais qualité extraordinaire !</em></p>
+
+            <!-- Image et lien de navigation pour Cap Créole -->
+            <div style="margin-top: 20px; text-align: center">
+              <img
+                src="images/guide/05.jpg"
+                alt="Cap Créole - Poisson frais"
+                style="
+                  width: 100%;
+                  max-width: 400px;
+                  height: 200px;
+                  object-fit: cover;
+                  border-radius: 8px;
+                  margin-bottom: 15px;
+                  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+                "
+              />
+
+              <a
+                href="geo:16.1598,-61.7751?q=Cap+Créole+Pigeon+Bouillante"
+                style="
+                  display: inline-flex;
+                  align-items: center;
+                  gap: 8px;
+                  padding: 15px 25px;
+                  background: #4caf50;
+                  color: white;
+                  text-decoration: none;
+                  border-radius: 25px;
+                  font-size: 16px;
+                  font-weight: 500;
+                  transition: all 0.3s ease;
+                  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+                "
+              >
+                <i class="fas fa-location-arrow"></i>
+                Ouvrir la navigation
+              </a>
+            </div>
           </div>
 
           <div class="info-card">
             <h4><i class="fas fa-bread-slice"></i> Boulangerie et traiteur</h4>
+
+            <h5><i class="fas fa-store"></i> Four des Iles</h5>
             <p>
-              <strong>Boulangerie :</strong> Juste à côté de Carrefour Market,
-              pain excellent et traiteur (pizzas maison, rôti de porc, poulet
-              grillé, pâtisseries).
+              Juste à côté de Carrefour Market, pain excellent et traiteur
+              (pizzas maison, rôti de porc, poulet grillé, pâtisseries).
             </p>
             <p>
               <strong>Horaires :</strong> Ouvert le dimanche matin, fermé le
               lundi.
             </p>
 
-            <h4><i class="fas fa-drumstick-bite"></i> Boucherie</h4>
+            <!-- Image et lien de navigation pour Four des Iles -->
+            <div style="margin-top: 20px; text-align: center">
+              <img
+                src="images/guide/04.jpg"
+                alt="Four des Iles - Boulangerie"
+                style="
+                  width: 100%;
+                  max-width: 400px;
+                  height: 200px;
+                  object-fit: cover;
+                  border-radius: 8px;
+                  margin-bottom: 15px;
+                  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+                "
+              />
+
+              <a
+                href="geo:16.1610,-61.7745?q=Four+des+Iles+Boulangerie+Pigeon"
+                style="
+                  display: inline-flex;
+                  align-items: center;
+                  gap: 8px;
+                  padding: 15px 25px;
+                  background: #4caf50;
+                  color: white;
+                  text-decoration: none;
+                  border-radius: 25px;
+                  font-size: 16px;
+                  font-weight: 500;
+                  transition: all 0.3s ease;
+                  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+                "
+              >
+                <i class="fas fa-location-arrow"></i>
+                Ouvrir la navigation
+              </a>
+            </div>
+          </div>
+
+          <div class="info-card">
+            <h4><i class="fas fa-drumstick-bite"></i> Boucherie et traiteur</h4>
+
+            <h5><i class="fas fa-store"></i> Ti Taurus</h5>
             <p>
               À proximité de Carrefour Market, prendre à pied la petite rue
               entre le supermarché et la boulangerie. Viandes diverses,
               brochettes, etc.
             </p>
+
+            <!-- Image et lien de navigation pour Ti Taurus -->
+            <div style="margin-top: 20px; text-align: center">
+              <img
+                src="images/guide/06.jpg"
+                alt="Boucherie traiteur Ti Taurus"
+                style="
+                  width: 100%;
+                  max-width: 400px;
+                  height: 200px;
+                  object-fit: cover;
+                  border-radius: 8px;
+                  margin-bottom: 15px;
+                  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+                "
+              />
+
+              <a
+                href="geo:16.1613,-61.7753?q=Boucherie+traiteur+Ti+Taurus+Bouillante"
+                style="
+                  display: inline-flex;
+                  align-items: center;
+                  gap: 8px;
+                  padding: 15px 25px;
+                  background: #4caf50;
+                  color: white;
+                  text-decoration: none;
+                  border-radius: 25px;
+                  font-size: 16px;
+                  font-weight: 500;
+                  transition: all 0.3s ease;
+                  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+                "
+              >
+                <i class="fas fa-location-arrow"></i>
+                Ouvrir la navigation
+              </a>
+            </div>
           </div>
 
           <div class="info-card">
-            <h4>
-              <i class="fas fa-apple-alt"></i> Fruits et légumes - Chez Adèle
-            </h4>
+            <h4><i class="fas fa-apple-alt"></i> Fruits et légumes</h4>
+
+            <h5><i class="fas fa-store"></i> Chez Adèle</h5>
             <p>
               Sur la N2, à gauche dans la direction nord. Fruits et légumes
               excellents.
