--- a/public/guide-pratique.html
+++ b/public/guide-pratique.html
@@ -287,10 +287,151 @@
         box-shadow: 0 8px 25px rgba(0, 0, 0, 0.15);
       }
 
+      /* Menu mobile */
+      .mobile-nav {
+        display: none;
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        background: white;
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        z-index: 2000;
+        border-bottom: 2px solid #4caf50;
+        margin: 10px;
+        border-radius: 20px;
+        width: calc(100% - 20px);
+      }
+
+      .mobile-nav-header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 10px 20px;
+        background: rgba(76, 175, 80);
+        backdrop-filter: blur(15px);
+        -webkit-backdrop-filter: blur(15px);
+        color: white;
+        border-radius: 20px;
+        border: 1px solid rgba(255, 255, 255, 0.2);
+      }
+
+      .mobile-nav-title {
+        font-size: 1.2em;
+        font-weight: bold;
+      }
+
+      .mobile-nav-toggle {
+        background: none;
+        border: none;
+        color: white;
+        font-size: 1.5em;
+        cursor: pointer;
+        padding: 5px;
+      }
+
+      .mobile-nav-content {
+        max-height: 0;
+        overflow: hidden;
+        transition: max-height 0.3s ease;
+        background: rgba(255, 255, 255, 0.95);
+        backdrop-filter: blur(10px);
+        -webkit-backdrop-filter: blur(10px);
+        border-radius: 0 0 20px 20px;
+        margin: 0;
+        padding: 0;
+        opacity: 0;
+        transition: max-height 0.3s ease, opacity 0.3s ease;
+      }
+
+      .mobile-nav-content.active {
+        max-height: 500px;
+        opacity: 1;
+        border-radius: 0 0 20px 20px;
+      }
+
+      .mobile-nav-content.active {
+        max-height: 500px;
+      }
+
+      .mobile-search {
+        position: relative;
+        padding: 15px 20px;
+        border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+        margin: 0;
+        background: rgba(255, 255, 255, 0.9);
+        backdrop-filter: blur(10px);
+        -webkit-backdrop-filter: blur(10px);
+      }
+
+      .mobile-search-input {
+        width: 100%;
+        padding: 12px 40px 12px 15px;
+        border: 2px solid #4caf50;
+        border-radius: 25px;
+        font-size: 16px;
+        outline: none;
+      }
+
+      .mobile-search-input:focus {
+        border-color: #45a049;
+        box-shadow: 0 0 5px rgba(76, 175, 80, 0.3);
+      }
+
+      .mobile-search-icon {
+        position: absolute;
+        right: 35px;
+        top: 50%;
+        transform: translateY(-50%);
+        color: #4caf50;
+      }
+
+      .mobile-nav-links {
+        padding: 10px 0 0 0;
+        max-height: 300px;
+        overflow-y: auto;
+        border-radius: 0 0 20px 20px;
+        background: rgba(255, 255, 255, 0.9);
+        backdrop-filter: blur(10px);
+        -webkit-backdrop-filter: blur(10px);
+      }
+
+      .mobile-nav-links a {
+        display: block;
+        padding: 12px 20px;
+        color: #333;
+        text-decoration: none;
+        border-bottom: 1px solid #f0f0f0;
+        transition: background-color 0.2s ease;
+      }
+
+      .mobile-nav-links a:hover {
+        background-color: #f8f9fa;
+        color: #4caf50;
+      }
+
+      .mobile-nav-links a:last-child {
+        border-bottom: none;
+        border-radius: 0 0 20px 20px;
+        padding-bottom: 15px;
+      }
+
       @media (max-width: 768px) {
+        /* Masquer le menu desktop et la section de recherche */
+        .search-section {
+          display: none;
+        }
+
+        /* Afficher le menu mobile */
+        .mobile-nav {
+          display: block;
+        }
+
+        /* Ajuster le container principal pour le menu mobile */
         .main-container {
           margin: 10px;
           padding: 15px;
+          margin-top: 80px; /* Moins d'espace car menu plus fin */
         }
 
         .header h1 {
@@ -299,20 +440,6 @@
 
         .header h2 {
           font-size: 1.2em;
-        }
-
-        .search-section {
-          padding: 20px;
-        }
-
-        .nav-menu {
-          flex-direction: column;
-          align-items: center;
-        }
-
-        .nav-menu a {
-          width: 200px;
-          text-align: center;
         }
 
         .content-section {
@@ -341,7 +468,7 @@
         }
 
         .home-button {
-          top: 20px;
+          top: 100px; /* Ajusté pour le menu plus fin */
           left: 20px;
         }
       }
@@ -352,6 +479,40 @@
     <a href="index.html" class="home-button" title="Retour à l'accueil">
       <i class="fas fa-home"></i>
     </a>
+
+    <!-- Menu mobile ancré en haut -->
+    <div class="mobile-nav" id="mobileNav">
+      <div class="mobile-nav-header">
+        <span class="mobile-nav-title">Menu</span>
+        <button class="mobile-nav-toggle" id="mobileNavToggle">
+          <i class="fas fa-bars"></i>
+        </button>
+      </div>
+      <div class="mobile-nav-content" id="mobileNavContent">
+        <div class="mobile-search">
+          <input
+            type="text"
+            id="mobileSearchInput"
+            class="mobile-search-input"
+            placeholder="Rechercher..."
+          />
+          <i class="fas fa-search mobile-search-icon"></i>
+        </div>
+        <div class="mobile-nav-links">
+          <a href="#logement">🏠 Logement</a>
+          <a href="#eau-electricite">💧⚡ Eau & Électricité</a>
+          <a href="#environnement">📍 Localisation</a>
+          <a href="#activites">🎯 Activités</a>
+          <a href="#services">🛒 Services</a>
+          <a href="#restaurants">🍽️ Restaurants</a>
+          <a href="#sante">🏥 Soins & Santé</a>
+          <a href="#cyclones">🌀 Cyclones</a>
+          <a href="#transport">🚗 Transport</a>
+          <a href="#excursions">🗺️ Excursions</a>
+          <a href="#pratique">ℹ️ Infos Pratiques</a>
+        </div>
+      </div>
+    </div>
 
     <!-- Container principal -->
     <div class="main-container">
@@ -2851,6 +3012,50 @@
         } else if (document.body.scrollTop > 0) {
           document.body.scrollTop = 0
         }
+      })
+
+      // Mobile navigation functionality
+      const mobileNavToggle = document.getElementById('mobileNavToggle')
+      const mobileNavContent = document.getElementById('mobileNavContent')
+      const mobileSearchInput = document.getElementById('mobileSearchInput')
+
+      // Toggle mobile menu
+      mobileNavToggle.addEventListener('click', function () {
+        mobileNavContent.classList.toggle('active')
+        const icon = this.querySelector('i')
+        if (mobileNavContent.classList.contains('active')) {
+          icon.className = 'fas fa-times'
+        } else {
+          icon.className = 'fas fa-bars'
+        }
+      })
+
+      // Mobile search functionality
+      mobileSearchInput.addEventListener('input', function () {
+        const searchTerm = this.value.toLowerCase()
+        const cards = document.querySelectorAll('.info-card')
+
+        cards.forEach((card) => {
+          const text = card.textContent.toLowerCase()
+          if (text.includes(searchTerm)) {
+            card.style.display = 'block'
+            // Highlight matching text
+            if (searchTerm.length > 2) {
+              highlightText(card, searchTerm)
+            }
+          } else {
+            card.style.display = 'none'
+          }
+        })
+      })
+
+      // Close mobile menu when clicking on a link
+      document.querySelectorAll('.mobile-nav-links a').forEach((link) => {
+        link.addEventListener('click', function () {
+          mobileNavContent.classList.remove('active')
+          const icon = mobileNavToggle.querySelector('i')
+          icon.className = 'fas fa-bars'
+        })
       })
 
       // Smooth scrolling for navigation links (excluding back to top button)
