--- a/public/guide-pratique.html
+++ b/public/guide-pratique.html
@@ -7,6 +7,27 @@
       content="width=device-width, initial-scale=1, user-scalable=no"
     />
     <title>Guide Calypso Bay</title>
+
+    <!-- Favicons -->
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="images/logos/favicons/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="images/logos/favicons/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="images/logos/favicons/favicon-16x16.png"
+    />
+    <link rel="manifest" href="manifest.json" />
+    <link rel="shortcut icon" href="images/logos/favicons/favicon.ico" />
     <link rel="stylesheet" href="assets/css/guide.css" />
     <link
       rel="stylesheet"
