--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
 						</ul>
 					</div>
 					<div class="image filtered span-1-75" data-position="25% 25%">
-						<img src="images/pic01.jpg" alt="" />
+						<img src="images/pic01.webp" alt="" />
 					</div>
 				</section>
 
@@ -69,7 +69,7 @@
 						</p>
 					</div>
 					<div class="image filtered tinted" data-position="center">
-						<img src="images/pic02.jpg" alt="" />
+						<img src="images/pic02.webp" alt="" />
 					</div>
 				</section>
 
@@ -131,7 +131,7 @@
 						<div id="equipment-buttons" class="actions" style="display: flex; flex-wrap: wrap; gap: 1rem;"></div>
 					</div>
 					<div class="image filtered tinted" data-position="center">
-						<img src="images/pic04.jpg" alt="" />
+						<img src="images/pic04.webp" alt="" />
 					</div>
 				</section>
 
@@ -150,63 +150,63 @@
 					<div class="gallery">
 						<div class="group span-3">
 							<a href="#" class="image filtered span-3" data-room="Salon" data-position="center">
-								<img src="images/gallery/thumbs/01.jpg" alt="Salon" />
+								<img src="images/gallery/thumbs/01.webp" alt="Salon" />
 								<div class="caption">Salon</div>
 							</a>
 							<a href="#" class="image filtered span-1-5" data-room="Cuisine" data-position="center">
-								<img src="images/gallery/thumbs/02.jpg" alt="Cuisine" />
+								<img src="images/gallery/thumbs/02.webp" alt="Cuisine" />
 								<div class="caption">Cuisine</div>
 							</a>
 							<a href="#" class="image filtered span-1-5" data-room="Espace-repas" data-position="center">
-								<img src="images/gallery/thumbs/03.jpg" alt="Espace repas" />
+								<img src="images/gallery/thumbs/03.webp" alt="Espace repas" />
 								<div class="caption">Espace repas</div>
 							</a>
 						</div>
 						<a href="#" class="image filtered span-1-5" data-room="Chambre1" data-position="center">
-							<img src="images/gallery/thumbs/04.jpg" alt="Chambre 1" />
+							<img src="images/gallery/thumbs/04.webp" alt="Chambre 1" />
 							<div class="caption">Chambre 1</div>
 						</a>
 						<div class="group span-4-5">
 							<a href="#" class="image filtered span-3" data-room="Chambre2" data-position="center">
-								<img src="images/gallery/thumbs/05.jpg" alt="Chambre 2" />
+								<img src="images/gallery/thumbs/05.webp" alt="Chambre 2" />
 								<div class="caption">Chambre 2</div>
 							</a>
 							<a href="#" class="image filtered span-1-5" data-room="Chambre3" data-position="center">
-								<img src="images/gallery/thumbs/06.jpg" alt="Chambre 3" />
+								<img src="images/gallery/thumbs/06.webp" alt="Chambre 3" />
 								<div class="caption">Chambre 3</div>
 							</a>
 							<a href="#" class="image filtered span-1-5" data-room="SDB1" data-position="center">
-								<img src="images/gallery/thumbs/07.jpg" alt="Salle de bain 1" />
+								<img src="images/gallery/thumbs/07.webp" alt="Salle de bain 1" />
 								<div class="caption">Salle de bain 1</div>
 							</a>
 							<a href="#" class="image filtered span-3" data-room="SDB2" data-position="center">
-								<img src="images/gallery/thumbs/08.jpg" alt="Salle de bain 2" />
+								<img src="images/gallery/thumbs/08.webp" alt="Salle de bain 2" />
 								<div class="caption">Salle de bain 2</div>
 							</a>
 						</div>
 						<a href="#" class="image filtered span-1-5" data-room="SDB3" data-position="center">
-							<img src="images/gallery/thumbs/09.jpg" alt="Salle de bain 3" />
+							<img src="images/gallery/thumbs/09.webp" alt="Salle de bain 3" />
 							<div class="caption">Salle de bain 3</div>
 						</a>
 						<div class="group span-4-5">
 							<a href="#" class="image filtered span-3" data-room="Jardin" data-position="center">
-								<img src="images/gallery/thumbs/10.jpg" alt="Jardin" />
+								<img src="images/gallery/thumbs/10.webp" alt="Jardin" />
 								<div class="caption">Jardin</div>
 							</a>
 							<a href="#" class="image filtered span-1-5" data-room="Terasse" data-position="center">
-								<img src="images/gallery/thumbs/11.jpg" alt="Terrasse" />
+								<img src="images/gallery/thumbs/11.webp" alt="Terrasse" />
 								<div class="caption">Terrasse</div>
 							</a>
 							<a href="#" class="image filtered span-1-5" data-room="Exterieur" data-position="center">
-								<img src="images/gallery/thumbs/12.jpg" alt="Extérieur" />
+								<img src="images/gallery/thumbs/12.webp" alt="Extérieur" />
 								<div class="caption">Extérieur</div>
 							</a>
 							<a href="#" class="image filtered span-1-5" data-room="Piscine" data-position="center">
-								<img src="images/gallery/thumbs/13.jpg" alt="Piscine" />
+								<img src="images/gallery/thumbs/13.webp" alt="Piscine" />
 								<div class="caption">Piscine</div>
 							</a>
 							<a href="#" class="image filtered span-1-5" data-room="Autres" data-position="center">
-								<img src="images/gallery/thumbs/14.jpg" alt="Autres" />
+								<img src="images/gallery/thumbs/14.webp" alt="Autres" />
 								<div class="caption">Autres</div>
 							</a>
 						</div>
