Opti index phase 1

--- a/public/finaliser-reservation.html
+++ b/public/finaliser-reservation.html
@@ -634,7 +634,10 @@
             </ul>
           </div>
           <div class="image filtered span-1-75" data-position="25% 25%">
-            <img src="images/gallery/fulls/Jardin/13.jpg" alt="" />
+            <img
+              src="images/gallery/fulls/Jardin/13.webp"
+              alt="Vue du jardin de Calypso Bay"
+            />
           </div>
         </section>
 
@@ -739,7 +742,10 @@
             </form>
           </div>
           <div class="image" data-position="center">
-            <img src="images/gallery/fulls/Exterieur/04.jpg" alt="" />
+            <img
+              src="images/gallery/fulls/Exterieur/04.webp"
+              alt="Vue extérieure de Calypso Bay"
+            />
           </div>
         </section>
 
@@ -793,7 +799,7 @@
           </div>
           <div class="image filtered tinted" data-position="center">
             <img
-              src="images/gallery/fulls/Piscine/04.jpg"
+              src="images/gallery/fulls/Piscine/04.webp"
               alt="Piscine - Calypso Bay"
             />
           </div>
