--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,13 @@
 		<link rel="manifest" href="manifest.json">
 		<link rel="shortcut icon" href="images/logos/favicons/favicon.ico">
 
+		<!-- Préconnexions réseau pour améliorer les performances -->
+		<link rel="preconnect" href="https://maps.googleapis.com" crossorigin>
+		<link rel="preconnect" href="https://maps.gstatic.com" crossorigin>
+		<link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin>
+		<link rel="dns-prefetch" href="//maps.googleapis.com">
+		<link rel="dns-prefetch" href="//cdnjs.cloudflare.com">
+
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="stylesheet" href="assets/css/custom.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
@@ -48,7 +55,7 @@
 						</ul>
 					</div>
 					<div class="image filtered span-1-75" data-position="25% 25%">
-						<img src="images/pic01.webp" alt="" />
+						<img src="images/pic01.webp" alt="Vue de la piscine de la villa Calypso Bay" />
 					</div>
 				</section>
 
@@ -69,7 +76,7 @@
 						</p>
 					</div>
 					<div class="image filtered tinted" data-position="center">
-						<img src="images/pic02.webp" alt="" />
+						<img src="images/pic02.webp" alt="Vue aérienne de la villa avec piscine et jardin tropical" />
 					</div>
 				</section>
 
@@ -131,7 +138,7 @@
 						<div id="equipment-buttons" class="actions" style="display: flex; flex-wrap: wrap; gap: 1rem;"></div>
 					</div>
 					<div class="image filtered tinted" data-position="center">
-						<img src="images/pic04.webp" alt="" />
+						<img src="images/pic04.webp" alt="Vue extérieure de la villa pendant un coucher de soleil" />
 					</div>
 				</section>
 
@@ -150,63 +157,63 @@
 					<div class="gallery">
 						<div class="group span-3">
 							<a href="#" class="image filtered span-3" data-room="Salon" data-position="center">
-								<img src="images/gallery/thumbs/01.webp" alt="Salon" />
+								<img src="images/gallery/thumbs/01.webp" alt="Vue du salon principal de la villa" />
 								<div class="caption">Salon</div>
 							</a>
 							<a href="#" class="image filtered span-1-5" data-room="Cuisine" data-position="center">
-								<img src="images/gallery/thumbs/02.webp" alt="Cuisine" />
+								<img src="images/gallery/thumbs/02.webp" alt="Cuisine équipée moderne" />
 								<div class="caption">Cuisine</div>
 							</a>
 							<a href="#" class="image filtered span-1-5" data-room="Espace-repas" data-position="center">
-								<img src="images/gallery/thumbs/03.webp" alt="Espace repas" />
+								<img src="images/gallery/thumbs/03.webp" alt="Zone de repas extérieure avec vue sur la mer" />
 								<div class="caption">Espace repas</div>
 							</a>
 						</div>
 						<a href="#" class="image filtered span-1-5" data-room="Chambre1" data-position="center">
-							<img src="images/gallery/thumbs/04.webp" alt="Chambre 1" />
+							<img src="images/gallery/thumbs/04.webp" alt="Première chambre avec salle de bains privative et vue sur la mer" />
 							<div class="caption">Chambre 1</div>
 						</a>
 						<div class="group span-4-5">
 							<a href="#" class="image filtered span-3" data-room="Chambre2" data-position="center">
-								<img src="images/gallery/thumbs/05.webp" alt="Chambre 2" />
+								<img src="images/gallery/thumbs/05.webp" alt="Deuxième chambre spacieuse avec vue sur la mer" />
 								<div class="caption">Chambre 2</div>
 							</a>
 							<a href="#" class="image filtered span-1-5" data-room="Chambre3" data-position="center">
-								<img src="images/gallery/thumbs/06.webp" alt="Chambre 3" />
+								<img src="images/gallery/thumbs/06.webp" alt="Troisième chambre avec vue sur le jardin et la mer" />
 								<div class="caption">Chambre 3</div>
 							</a>
 							<a href="#" class="image filtered span-1-5" data-room="SDB1" data-position="center">
-								<img src="images/gallery/thumbs/07.webp" alt="Salle de bain 1" />
+								<img src="images/gallery/thumbs/07.webp" alt="Première salle de bains avec douche" />
 								<div class="caption">Salle de bain 1</div>
 							</a>
 							<a href="#" class="image filtered span-3" data-room="SDB2" data-position="center">
-								<img src="images/gallery/thumbs/08.webp" alt="Salle de bain 2" />
+								<img src="images/gallery/thumbs/08.webp" alt="Deuxième salle de bains avec douche" />
 								<div class="caption">Salle de bain 2</div>
 							</a>
 						</div>
 						<a href="#" class="image filtered span-1-5" data-room="SDB3" data-position="center">
-							<img src="images/gallery/thumbs/09.webp" alt="Salle de bain 3" />
+							<img src="images/gallery/thumbs/09.webp" alt="Troisième salle de bains avec douche italienne" />
 							<div class="caption">Salle de bain 3</div>
 						</a>
 						<div class="group span-4-5">
 							<a href="#" class="image filtered span-3" data-room="Jardin" data-position="center">
-								<img src="images/gallery/thumbs/10.webp" alt="Jardin" />
+								<img src="images/gallery/thumbs/10.webp" alt="Jardin tropical avec végétation luxuriante" />
 								<div class="caption">Jardin</div>
 							</a>
 							<a href="#" class="image filtered span-1-5" data-room="Terasse" data-position="center">
-								<img src="images/gallery/thumbs/11.webp" alt="Terrasse" />
+								<img src="images/gallery/thumbs/11.webp" alt="Grande terrasse avec espace repas couvert" />
 								<div class="caption">Terrasse</div>
 							</a>
 							<a href="#" class="image filtered span-1-5" data-room="Exterieur" data-position="center">
-								<img src="images/gallery/thumbs/12.webp" alt="Extérieur" />
+								<img src="images/gallery/thumbs/12.webp" alt="Vue extérieure de la villa et ses environs" />
 								<div class="caption">Extérieur</div>
 							</a>
 							<a href="#" class="image filtered span-1-5" data-room="Piscine" data-position="center">
-								<img src="images/gallery/thumbs/13.webp" alt="Piscine" />
+								<img src="images/gallery/thumbs/13.webp" alt="Piscine à débordement avec vue sur la mer" />
 								<div class="caption">Piscine</div>
 							</a>
 							<a href="#" class="image filtered span-1-5" data-room="Autres" data-position="center">
-								<img src="images/gallery/thumbs/14.webp" alt="Autres" />
+								<img src="images/gallery/thumbs/14.webp" alt="Autres vues et détails de la villa" />
 								<div class="caption">Autres</div>
 							</a>
 						</div>
@@ -220,7 +227,7 @@
 
 					<!-- 🆕 Nouveau conteneur -->
 					<div class="lightbox-image-wrapper">
-						<img id="lightbox-img" src="" alt="" />
+						<img id="lightbox-img" src="" alt="Image de la galerie Calypso Bay" />
 						<div class="nav">
 							<i class="fas fa-chevron-circle-left" onclick="prevImage()"></i>
 							<i class="fas fa-chevron-circle-right" onclick="nextImage()"></i>
@@ -345,7 +352,7 @@
 							<ul class="contact-icons color1">
 								<li class="review-item">
 									<a href="https://www.airbnb.fr/rooms/718692761956767082" target="_blank" rel="noopener" class="review-link" style="display: flex; align-items: center; gap: 0.75em;">
-										<img src="images/logos/AIRBNB.webp" alt="Logo Airbnb" class="logo-circle" />
+										<img src="images/logos/AIRBNB.webp" alt="Logo de la plateforme Airbnb" class="logo-circle" />
 										<div class="review-text">
 											<span>Airbnb</span>
 											<div class="review-row">
@@ -364,7 +371,7 @@
 
 								<li class="review-item">
 									<a href="https://www.booking.com/hotel/gp/calypso-bay.fr.html#tab-reviews" target="_blank" rel="noopener" class="review-link" style="display: flex; align-items: center; gap: 0.75em;">
-										<img src="images/logos/BOOKING.webp" alt="Logo Booking" class="logo-circle" />
+										<img src="images/logos/BOOKING.webp" alt="Logo de la plateforme Booking.com" class="logo-circle" />
 										<div class="review-text">
 											<span>Booking</span>
 											<div class="review-row">
