--- a/public/annuler-reservation.html
+++ b/public/annuler-reservation.html
@@ -124,7 +124,7 @@
             </ul>
           </div>
           <div class="image filtered span-1-75" data-position="25% 25%">
-            <img src="images/pic04.jpg" alt="" />
+            <img src="images/pic04.webp" alt="Vue de Calypso Bay" />
           </div>
         </section>
 
@@ -139,7 +139,7 @@
             </div>
           </div>
           <div class="image filtered tinted" data-position="center">
-            <img src="images/pic02.jpg" alt="" />
+            <img src="images/pic02.webp" alt="Vue panoramique de Calypso Bay" />
           </div>
         </section>
 
