--- a/public/payer-solde.html
+++ b/public/payer-solde.html
@@ -171,7 +171,7 @@
             </ul>
           </div>
           <div class="image filtered span-1-75" data-position="25% 25%">
-            <img src="images/pic01.jpg" alt="" />
+            <img src="images/pic01.webp" alt="Vue de Calypso Bay" />
           </div>
         </section>
 
@@ -192,7 +192,7 @@
             </div>
           </div>
           <div class="image filtered tinted" data-position="center">
-            <img src="images/pic02.jpg" alt="" />
+            <img src="images/pic02.webp" alt="Vue panoramique de Calypso Bay" />
           </div>
         </section>
 
