--- a/public/reservation-solde-confirme.html
+++ b/public/reservation-solde-confirme.html
@@ -59,7 +59,7 @@
         --card-border: rgba(255, 255, 255, 0.6);
         --ring: rgba(20, 184, 166, 0.35);
         --success: #16a34a;
-        --hero-img: url('images/gallery/fulls/Jardin/13.jpg');
+        --hero-img: url('images/gallery/fulls/Jardin/13.webp');
       }
 
       * {
@@ -363,7 +363,7 @@
         inset: 0;
         background-image: var(
           --hero-img,
-          url('images/gallery/fulls/Jardin/13.jpg')
+          url('images/gallery/fulls/Jardin/13.webp')
         );
         background-size: cover;
         background-position: center;
