--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
 		<title>Calypso Bay - Bouillante</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="description" content="Villa de luxe Calypso Bay à Bouillante, Guadeloupe. Villa bois 180m² avec piscine privée, vue mer, 3 chambres, terrasse 50m². Location vacances de standing aux Antilles." />
 
 		<!-- Favicons -->
 		<link rel="apple-touch-icon" sizes="180x180" href="images/logos/favicons/apple-touch-icon.png">
